Added pictures to some of the pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <section id="about" class="content-section">
             <h2>About Me</h2>
             <img alt="Portrait of Dylan" src="resources/images/placeholder.png">
-            <p>Write a short summary about yourself here.</p>
+            <p>Hi there! My name is Dylan and I am a working to become a Full Stack Developer! 
+                I originally graduated school with a degree in Biology and now I am looking to become 
+                a software engineer! I am slowly developing my skills through Codecademy Projects!
+            </p>
         </section>
 
         <section id="projects" class="content-section">
@@ -68,13 +71,25 @@
 
         <section id="hobbies" class="content-section">
             <h2>Hobbies</h2>
-            <p>What you enjoy outside of work or school.</p>
+            <div>
+                <h3>Brazilian Jiu-Jitsu</h3>
+
+            </div>
+            <div>
+                <h3>Reading Books</h3>
+            </div>
+            <div>
+                <h3>Running</h3>
+            </div>
+            <div>
+                <h3>Weight Lifting</h3>
+            </div>
         </section>
     </main>
 
     <footer class="site-footer">
         <ul>
-            <li><a href="#">GitHub (placeholder)</a></li>
+            <li><a href="#">GitHub: </a></li>
             <li>Phone: (your number)</li>
             <li>Email: <a href="mailto:you@example.com">you@example.com</a></li>
             <li><a href="#">Resume (placeholder)</a></li>
